--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -42,17 +42,15 @@ jobs:
           source venv/bin/activate
           sqlite3 db.sqlite3 ".read fictionalData.sql"
 
-      - name: Install ngrok
-        run: |
-          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-          sudo apt update && sudo apt install ngrok
+      - name: Install LocalTunnel
+        run: npm install -g localtunnel
 
-      - name: Expose API with ngrok
+      - name: Expose API with LocalTunnel
         run: |
           cd backend
           source venv/bin/activate
           nohup python manage.py runserver 0.0.0.0:8000 &
-          ngrok http 8000 > /dev/null &
+          lt --port 8000 > url.txt &
           sleep 5
-          curl --silent http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+          cat url.txt
+
