--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -1,4 +1,4 @@
-name: Deploy API
+name: Deploy API with ngrok
 
 on:
   push:
@@ -42,14 +42,23 @@ jobs:
           source venv/bin/activate
           sqlite3 db.sqlite3 ".read fictionalData.sql"
 
-      - name: Install LocalTunnel
-        run: npm install -g localtunnel
+      - name: Install ngrok
+        run: |
+          wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
+          unzip ngrok-stable-linux-amd64.zip
+          sudo mv ngrok /usr/local/bin/
 
-      - name: Expose API with LocalTunnel
+      - name: Authenticate ngrok
+        run: |
+          echo ${{ secrets.NGROK_AUTH_TOKEN }} | ngrok authtoken
+
+      - name: Expose API with ngrok
         run: |
           cd backend
           source venv/bin/activate
           nohup python manage.py runserver 0.0.0.0:8000 & 
-          sleep 60  # Aumentar el tiempo de espera
-          URL=$(lt --port 8000 --print-urls | grep -o 'https://[a-z0-9]*\.loca.lt')  # Filtrar la URL
+          sleep 10  # Esperar que el servidor inicie
+          ./ngrok http 8000 --log=stdout > ngrok.log &  # Iniciar ngrok
+          sleep 10  # Esperar para que ngrok establezca la conexión
+          URL=$(tail -n 10 ngrok.log | grep -o 'https://[a-z0-9]*\.ngrok.io')  # Obtener la URL
           echo "API URL: $URL"
