--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Authenticate ngrok
         run: |
-          echo ${{ secrets.NGROK_AUTH_TOKEN }} | ngrok authtoken
+          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
       - name: Expose API with ngrok
         run: |
