--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -46,11 +46,11 @@ jobs:
         run: |
           wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
           unzip ngrok-stable-linux-amd64.zip
-          sudo mv ngrok /usr/local/bin/
-
+          chmod +x ngrok  # Asegúrate de que ngrok sea ejecutable
+          
       - name: Authenticate ngrok
         run: |
-          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+          ./ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Ejecuta ngrok desde el mismo directorio
 
       - name: Expose API with ngrok
         run: |
@@ -58,7 +58,7 @@ jobs:
           source venv/bin/activate
           nohup python manage.py runserver 0.0.0.0:8000 & 
           sleep 10  # Esperar que el servidor inicie
-          ./ngrok http 8000 --log=stdout > ngrok.log &  # Iniciar ngrok
+          ./ngrok http 8000 --log=stdout > ngrok.log &  # Ejecutar ngrok desde el mismo directorio
           sleep 10  # Esperar para que ngrok establezca la conexión
           URL=$(tail -n 10 ngrok.log | grep -o 'https://[a-z0-9]*\.ngrok.io')  # Obtener la URL
           echo "API URL: $URL"
