--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -46,20 +46,29 @@ jobs:
         run: |
           wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
           unzip ngrok-stable-linux-amd64.zip
-          chmod +x ngrok  # Asegúrate de que ngrok sea ejecutable
-          mv ngrok /tmp/ngrok  # Mueve ngrok a un directorio temporal
+          chmod +x ngrok
+          mv ngrok /tmp/ngrok
 
       - name: Authenticate ngrok
         run: |
-          /tmp/ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Usa la ruta correcta para ngrok
+          /tmp/ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
       - name: Expose API with ngrok
         run: |
           cd backend
           source venv/bin/activate
-          nohup python manage.py runserver 0.0.0.0:8000 & 
-          sleep 10  # Esperar que el servidor inicie
-          /tmp/ngrok http 8000 --log=stdout > ngrok.log &  # Ejecutar ngrok desde el directorio temporal
+          nohup python manage.py runserver 0.0.0.0:8000 &  # Iniciar Django en segundo plano
+          
+          # Verificar si el servidor Django está corriendo en el puerto 8000
+          sleep 10  # Esperar para asegurar que el servidor inicie
+          if ! lsof -i :8000; then
+            echo "Django server is not running!"  # Si no se está ejecutando, fallar el flujo
+            exit 1
+          fi
+
+          # Si Django está corriendo, ejecutar ngrok
+          /tmp/ngrok http 8000 --log=stdout > ngrok.log &  # Iniciar ngrok en segundo plano
           sleep 10  # Esperar para que ngrok establezca la conexión
           URL=$(tail -n 10 ngrok.log | grep -o 'https://[a-z0-9]*\.ngrok.io')  # Obtener la URL
           echo "API URL: $URL"
+
