--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,12 @@
       "src": "backend/manage.py",
       "use": "@vercel/python"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "backend/manage.py"
+    }
   ]
 }
+
