--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 Django==5.1.6
 djangorestframework==3.15.2
+gunicorn==20.1.0
+psycopg2-binary==2.9.10
+setuptools==75.8.2
 sqlparse==0.5.3
 tzdata==2025.1
-gunicorn==20.1.0
